@@ -1,2 +1,3 @@
 *.elc
 .sconsign
+.sconsign.dblite
