@@ -1,3 +1,7 @@
+2007-09-18  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* config/bm-config.el: make package optional
+
 2007-04-11  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* icicles: package is now maintained separately
